# OBS_Test_Card

./: .gitattributes  .gitignore  CMakeLists.txt  buildspec.json
.github/scripts/: Package-Windows.ps1  installer.iss
.github/workflows/: check-format.yaml
cmake/windows/: helpers.cmake
data/locale/: en-US.ini  es-ES.ini
src/: logo_png.h  obs_logo_png.h  plugin-main.c  plugin-support.c.in  plugin-support.h  test-card-dock-register.cpp  test-card-dock.cpp  test-card-dock.h  test-source.c  test-source_update_fix.c
